Fix navigation bar overlapping page content in mobile view

--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 #navigation-bar {
     background-color: black;
     display: flex;
-    height: 75px;
+
 }
 
 #navigation-bar a {
